welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: type mismatch;
 found   : Unit
 required: Int
	if (a<=13 && a>=19) {return n=n+1}
                                     ^countTeen:4: error: type mismatch;
 found   : Unit
 required: Int
	if (b<=13 && b>=19) {return n=n+1}
                                     ^countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
	if (c<=13 && c>=19) {return n=n+1}
                                     ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
	if (d<=13 && d>=19) {return n=n+1}
                                     ^countTeen:7: error: type mismatch;
 found   : Unit
 required: Int
	else{return n=0}
                     ^